tests/ui/parser/missing-enum-or-struct-issue-125446.rs
Whoops {}
//~^ ERROR missing `enum` or `struct` for enum or struct definition
